added initial doc
